[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameTheme.tres" type="Theme" id=1]
[ext_resource path="res://game/menus/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://game/Progress.gdshader" type="Shader" id=4]
[ext_resource path="res://game/Progress.gd" type="Script" id=5]
[ext_resource path="res://assets/AlfaSlabOne-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/progress = 0.0
shader_param/bg_color = Color( 1, 0.82, 0.4, 0 )
shader_param/fg_color = Color( 0.93, 0.28, 0.43, 1 )
shader_param/selected_color = Color( 1, 1, 1, 0 )
shader_param/draw_select = false

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
script = ExtResource( 2 )

[node name="Progress" type="Sprite" parent="."]
pause_mode = 2
material = SubResource( 2 )
position = Vector2( 310, 590 )
scale = Vector2( 1.66667, 2.96296 )
z_index = -5
texture = ExtResource( 3 )
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 620.0
margin_bottom = 1180.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_left = 39.0
margin_right = 580.0
margin_bottom = 300.0
size_flags_horizontal = 6

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_right = 541.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "shiftTYPE"
align = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 304.0
margin_right = 620.0
margin_bottom = 1101.0
size_flags_vertical = 3
columns = 2

[node name="Label5" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 511.0
margin_bottom = 69.0
theme = ExtResource( 1 )

[node name="TestTile" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 515.0
margin_right = 620.0
margin_bottom = 69.0
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 73.0
margin_right = 511.0
margin_bottom = 142.0
theme = ExtResource( 1 )
text = "Tile Color: "

[node name="TileColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/GridContainer"]
margin_left = 515.0
margin_top = 73.0
margin_right = 620.0
margin_bottom = 142.0
size_flags_horizontal = 11
edit_alpha = false

[node name="Label4" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 146.0
margin_right = 511.0
margin_bottom = 215.0
theme = ExtResource( 1 )
text = "Tile Used Color: "

[node name="UsedColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/GridContainer"]
margin_left = 515.0
margin_top = 146.0
margin_right = 620.0
margin_bottom = 215.0
size_flags_horizontal = 11
edit_alpha = false

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 219.0
margin_right = 511.0
margin_bottom = 288.0
theme = ExtResource( 1 )
text = "Background Color: "

[node name="BGColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/GridContainer"]
margin_left = 515.0
margin_top = 219.0
margin_right = 620.0
margin_bottom = 288.0
size_flags_horizontal = 11
edit_alpha = false

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 292.0
margin_right = 511.0
margin_bottom = 361.0
theme = ExtResource( 1 )
text = "Progress Color:"

[node name="ProgColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/GridContainer"]
margin_left = 515.0
margin_top = 292.0
margin_right = 620.0
margin_bottom = 361.0
size_flags_horizontal = 11
edit_alpha = false

[node name="ResetColors" type="MenuButton" parent="VBoxContainer/GridContainer"]
margin_top = 365.0
margin_right = 511.0
margin_bottom = 440.0
focus_mode = 2
theme = ExtResource( 1 )
text = "Reset Colors"

[node name="BackButton" type="MenuButton" parent="VBoxContainer"]
margin_top = 1105.0
margin_right = 620.0
margin_bottom = 1180.0
theme = ExtResource( 1 )
text = "Back"

[connection signal="color_changed" from="VBoxContainer/GridContainer/TileColorPickerButton" to="." method="_on_TileColorPickerButton_color_changed"]
[connection signal="color_changed" from="VBoxContainer/GridContainer/UsedColorPickerButton" to="." method="_on_UsedColorPickerButton_color_changed"]
[connection signal="color_changed" from="VBoxContainer/GridContainer/BGColorPickerButton" to="." method="_on_BGColorPickerButton_color_changed"]
[connection signal="color_changed" from="VBoxContainer/GridContainer/ProgColorPickerButton" to="." method="_on_ProgColorPickerButton_color_changed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ResetColors" to="." method="_on_ResetColors_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
